# compete-research

./: .env.example  .gitignore  CLAUDE.md  SKILL.md  idea.md  pyproject.toml  true_dashboard.html
compete_research/: config.py
compete_research/agents/: research_agent.py
compete_research/templates/: compare.html  dashboard.html
data/: companies.json  research_history.json
docs/: compare-view-design-brief.md  design_brief.md
reports/: dashboard.html
reports/research/: research_2026-04-25.md  research_2026-04-26.md
skills/: dashboard.py  polish.py  research.py  save_research.py
