[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "compete-research"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "jinja2>=3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["compete_research*"]
